# Discord-Auto-Bumper

./: README.md  bump_settings.json  bumper.py  config.py  main.py  pyproject.toml
