[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
discord = "^1.7.3"
aiohttp = ">=3.6.0,<3.8.0"
typing-extensions = "^4.2.0"
yarl = "^1.7.2"
orjson = "^3.7.5"
requests = "^2.28.0"
Flask = "^2.1.2"
colorama = "^0.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"